crates/biome_cli/tests/snapshots/main_commands_inspect/json_output_includes_source_range.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.jsonc`

```json
{
  "formatter": { "lineWidth": 100 }
}
```

# Emitted Messages

```block
{
  "key": "formatter.lineWidth",
  "value": 100,
  "source": {
    "configurationKind": "root",
    "path": "biome.jsonc",
    "range": {
      "end": 35,
      "start": 32
    },
    "scope": "base"
  }
}
```
