crates/biome_cli/tests/snapshots/main_commands_inspect/key_output_includes_source_range.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.jsonc`

```json
{
  "formatter": { "lineWidth": 100 }
}
```

# Emitted Messages

```block
biome.jsonc:2:31 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key formatter.lineWidth has the value 100.
  
    1 │ {
  > 2 │   "formatter": { "lineWidth": 100 }
      │                               ^^^
    3 │ }
  
  i This value is provided by the root configuration.
  

```
