crates/biome_cli/tests/snapshots/main_commands_inspect/later_global_override_replaces_language_value.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 577
expression: redactor(content)
---
## `biome.json`

```json
{
  "javascript": { "formatter": { "lineWidth": 120 } },
  "overrides": [
    {
      "includes": ["**/*.js"],
      "formatter": { "lineWidth": 100 }
    }
  ]
}
```

# Emitted Messages

```block
{
  "key": "javascript.formatter.lineWidth",
  "value": 100,
  "source": {
    "configurationKind": "root",
    "includes": [
      "**/*.js"
    ],
    "matchedPath": "file.js",
    "overrideIndex": 0,
    "path": "biome.json",
    "range": {
      "end": 148,
      "start": 145
    },
    "scope": "override"
  }
}
```
