crates/biome_cli/tests/snapshots/main_commands_inspect/later_matching_override_uses_runtime_root_fallback.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "formatter": { "formatWithErrors": false },
  "overrides": [
    {
      "includes": ["**/*.test.js"],
      "formatter": { "formatWithErrors": true }
    },
    {
      "includes": ["**/*.test.js"],
      "formatter": { "lineWidth": 120 }
    }
  ]
}
```

# Emitted Messages

```block
{
  "key": "formatter.formatWithErrors",
  "value": false,
  "source": {
    "configurationKind": "root",
    "path": "biome.json",
    "range": {
      "end": 44,
      "start": 39
    },
    "scope": "base"
  }
}
```
