crates/biome_cli/tests/snapshots/main_commands_inspect/malformed_configuration_is_an_error.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{ "formatter": { "lineWidth": "wide" } }
```

# Termination Message

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Biome exited because the configuration resulted in errors. Please fix them.
  


```

# Emitted Messages

```block
biome.json:1:31 deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × lineWidth has an incorrect type, expected a number, but received a string.
  
  > 1 │ { "formatter": { "lineWidth": "wide" } }
      │                               ^^^^^^
  

```
